TE-10179 Replace direct usage of Store.php with corresponding Facades and Get rid of APPLICATION_STORE global constant usage. (#6163)
TE-10179 Dynamic Store | Backend Modules

--- a/src/Pyz/Zed/AvailabilityNotification/Presentation/Mail/subscribed.text.twig
+++ b/src/Pyz/Zed/AvailabilityNotification/Presentation/Mail/subscribed.text.twig
@@ -1,6 +1,6 @@
 {{ renderCmsBlockAsTwig(
     'availability-notification-subscription--text',
-    constant('APPLICATION_STORE'),
+    null,
     mail.locale.localeName,
     {mail: mail}
 ) }}
