--- a/src/Pyz/Zed/AvailabilityNotification/Presentation/Mail/notification.text.twig
+++ b/src/Pyz/Zed/AvailabilityNotification/Presentation/Mail/notification.text.twig
@@ -1,6 +1,6 @@
 {{ renderCmsBlockAsTwig(
     'availability-notification--text',
-    constant('APPLICATION_STORE'),
+    null,
     mail.locale.localeName,
     {mail: mail}
 ) }}
