--- a/src/Pyz/Zed/AvailabilityNotification/Presentation/Mail/unsubscribed.html.twig
+++ b/src/Pyz/Zed/AvailabilityNotification/Presentation/Mail/unsubscribed.html.twig
@@ -1,6 +1,6 @@
 {{ renderCmsBlockAsTwig(
     'availability-notification-unsubscribed--html',
-    constant('APPLICATION_STORE'),
+    null,
     mail.locale.localeName,
     {mail: mail}
 ) }}
