--- a/src/Pyz/Zed/CompanyMailConnector/Presentation/Mail/company_status.html.twig
+++ b/src/Pyz/Zed/CompanyMailConnector/Presentation/Mail/company_status.html.twig
@@ -1,6 +1,6 @@
 {{ renderCmsBlockAsTwig(
     'company-status--html',
-    constant('APPLICATION_STORE'),
+    null,
     mail.locale.localeName,
     {mail: mail}
 ) }}
