--- a/src/Pyz/Zed/CompanyUserInvitation/Presentation/Mail/invitation.text.twig
+++ b/src/Pyz/Zed/CompanyUserInvitation/Presentation/Mail/invitation.text.twig
@@ -1,6 +1,6 @@
 {{ renderCmsBlockAsTwig(
     'company-user-invitation--text',
-    constant('APPLICATION_STORE'),
+    null,
     mail.locale.localeName,
     {mail: mail}
 ) }}
