--- a/src/Pyz/Zed/Customer/Presentation/Mail/customer_registration.html.twig
+++ b/src/Pyz/Zed/Customer/Presentation/Mail/customer_registration.html.twig
@@ -1,6 +1,6 @@
 {{ renderCmsBlockAsTwig(
     'customer-registration--html',
-    constant('APPLICATION_STORE'),
+    null,
     mail.locale.localeName,
     {mail: mail}
 ) }}
