--- a/src/Pyz/Zed/Customer/Presentation/Mail/customer_reset_password_confirmation.html.twig
+++ b/src/Pyz/Zed/Customer/Presentation/Mail/customer_reset_password_confirmation.html.twig
@@ -1,6 +1,6 @@
 {{ renderCmsBlockAsTwig(
     'customer-restored-password-confirmation--html',
-    constant('APPLICATION_STORE'),
+    null,
     mail.locale.localeName,
     {mail: mail}
 ) }}
