--- a/src/Pyz/Zed/Customer/Presentation/Mail/customer_reset_password_confirmation.text.twig
+++ b/src/Pyz/Zed/Customer/Presentation/Mail/customer_reset_password_confirmation.text.twig
@@ -1,6 +1,6 @@
 {{ renderCmsBlockAsTwig(
     'customer-restored-password-confirmation--text',
-    constant('APPLICATION_STORE'),
+    null,
     mail.locale.localeName,
     {mail: mail}
 ) }}
