--- a/src/Pyz/Zed/Customer/Presentation/Mail/customer_restore_password.html.twig
+++ b/src/Pyz/Zed/Customer/Presentation/Mail/customer_restore_password.html.twig
@@ -1,6 +1,6 @@
 {{ renderCmsBlockAsTwig(
     'customer-restore-password--html',
-    constant('APPLICATION_STORE'),
+    null,
     mail.locale.localeName,
     {mail: mail}
 ) }}
