--- a/src/Pyz/Zed/GiftCardMailConnector/Presentation/Mail/gift_card_delivery.text.twig
+++ b/src/Pyz/Zed/GiftCardMailConnector/Presentation/Mail/gift_card_delivery.text.twig
@@ -1,6 +1,6 @@
 {{ renderCmsBlockAsTwig(
     'gift-card-delivery--text',
-    constant('APPLICATION_STORE'),
+    null,
     mail.locale.localeName,
     {mail: mail}
 ) }}
