--- a/src/Pyz/Zed/GiftCardMailConnector/Presentation/Mail/gift_card_usage.html.twig
+++ b/src/Pyz/Zed/GiftCardMailConnector/Presentation/Mail/gift_card_usage.html.twig
@@ -1,6 +1,6 @@
 {{ renderCmsBlockAsTwig(
     'gift-card-usage--html',
-    constant('APPLICATION_STORE'),
+    null,
     mail.locale.localeName,
     {mail: mail}
 ) }}
