--- a/src/Pyz/Zed/MerchantUserPasswordResetMail/Presentation/Mail/merchant_restore_password.html.twig
+++ b/src/Pyz/Zed/MerchantUserPasswordResetMail/Presentation/Mail/merchant_restore_password.html.twig
@@ -1,6 +1,6 @@
 {{ renderCmsBlockAsTwig(
     'merchant_restore_password--html',
-    constant('APPLICATION_STORE'),
+    null,
     mail.locale.localeName,
     {mail: mail}
 ) }}
