--- a/src/Pyz/Zed/Newsletter/Presentation/Mail/subscribed.text.twig
+++ b/src/Pyz/Zed/Newsletter/Presentation/Mail/subscribed.text.twig
@@ -1,6 +1,6 @@
 {{ renderCmsBlockAsTwig(
     'newsletter-subscribed--text',
-    constant('APPLICATION_STORE'),
+    null,
     mail.locale.localeName,
     {mail: mail}
 ) }}
