--- a/src/Pyz/Zed/Oms/Presentation/Mail/order_confirmation.html.twig
+++ b/src/Pyz/Zed/Oms/Presentation/Mail/order_confirmation.html.twig
@@ -1,6 +1,6 @@
 {{ renderCmsBlockAsTwig(
     'order-confirmation--html',
-    constant('APPLICATION_STORE'),
+    null,
     mail.locale.localeName,
     {mail: mail}
 ) }}
