--- a/src/Pyz/Zed/Oms/Presentation/Mail/order_shipped.html.twig
+++ b/src/Pyz/Zed/Oms/Presentation/Mail/order_shipped.html.twig
@@ -1,6 +1,6 @@
 {{ renderCmsBlockAsTwig(
     'order-shipped--html',
-    constant('APPLICATION_STORE'),
+    null,
     mail.locale.localeName,
     {mail: mail}
 ) }}
