--- a/src/Pyz/Zed/Oms/Presentation/Mail/order_shipped.text.twig
+++ b/src/Pyz/Zed/Oms/Presentation/Mail/order_shipped.text.twig
@@ -1,6 +1,6 @@
 {{ renderCmsBlockAsTwig(
     'order-shipped--text',
-    constant('APPLICATION_STORE'),
+    null,
     mail.locale.localeName,
     {mail: mail}
 ) }}
