--- a/src/Pyz/Yves/CheckoutPage/Theme/default/views/payment/payment.twig
+++ b/src/Pyz/Yves/CheckoutPage/Theme/default/views/payment/payment.twig
@@ -46,13 +46,13 @@
         {% block fieldset %}
             {% for name, choices in data.form.paymentSelection.vars.choices %}
                 {% set paymentProviderIndex = loop.index0 %}
-                <h5>{{ ('checkout.payment.provider.' ~ name) | trans }}</h5>
+                <h5>{{ name | trans }}</h5>
                 <ul>
                     {% for key, choice in choices %}
                         <li class="list__item spacing-y clear">
                             {% embed molecule('form') with {
                                 data: {
-                                    form: data.form[data.form.paymentSelection[key].vars.value],
+                                    form: data.form[data.form.paymentSelection[key].vars.name],
                                     enableStart: false,
                                     enableEnd: false,
                                 },
