--- a/src/Pyz/Yves/ShopUi/Theme/default/styles/util.scss
+++ b/src/Pyz/Yves/ShopUi/Theme/default/styles/util.scss
@@ -1,6 +1,6 @@
 @import '~ShopUi/styles/util';
+@import './utils/visibility';
 
 @include util-spacing;
 @include util-text;
 @include util-float;
-@include util-visibility;
